# ubuntu-package

./: README.md  pyproject.toml  setup.py
src/ubuntu_package_vivek9_nar.w_ay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: Moduletest.py
